--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,5 @@
 {
-    "prettier.printWidth": 120
+    "prettier.printWidth": 120,
+    "editor.fontWeight": "300",
+    "editor.fontFamily": "'Fira Code',Roboto Mono"
 }
