--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
         "puppeteer": "^5.3.1",
         "puppeteer-extra": "^3.1.15",
         "puppeteer-extra-plugin-recaptcha": "^3.1.18",
-        "puppeteer-extra-plugin-stealth": "^2.6.2",
-        "user-agents": "^1.0.559"
+        "puppeteer-extra-plugin-stealth": "^2.6.2"
     }
 }
