--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "zazzle-upload-tool",
-    "version": "1.0.0",
+    "version": "1.0.0-beta",
     "description": "",
     "main": "main.js",
     "build": {
